--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -125,11 +125,17 @@ nav ul li a.sitios:hover, a.informacion:hover, a.but-animal:hover{
 }
 
 .info .mapa {
-    width: 260px;
-    height: 300px;
-    background-color: #ddd;
+    width: 500px;
+    height: 500px;
     margin-right: 30px;
 }
+
+.mapa path{
+    fill: #007b35;
+    stroke: #006400;
+    stroke-width: 2px;
+}
+
 
 .info .texto {
     max-width: 600px;
