--- a/Frontend/css/Animal.css
+++ b/Frontend/css/Animal.css
@@ -113,6 +113,9 @@
 #descripcionGeneral {
     text-align: center;
 }
+#descripcionGeneral1 {
+    text-align: center;
+}
 
 .column h3 {
     font-size: 24px;
