--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -18,59 +18,65 @@ body {
     color: #333;
 }
 
-header {
-    background-color: #fff;
-    padding: 10px 0px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-nav {
+/* Estilos para la barra de navegación */
+.navigation-bar {
+    width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 8px;
-    padding-bottom: 15px;
-    border-bottom: solid 2px green;
+    padding: 0 20px;
+    position: static;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: white;
 }
 
-nav .logo {
-    font-size: 1.5em;
+/* Estilo para el logo de la barra */
+.navigation-bar .logo {
+    color: #32CD32;
+    font-size: 24px;
     font-weight: bold;
-    color: #007b35;
 }
-
-nav ul {
+.logo a {
+    color: #32CD32;
+    text-decoration: none;
+}
+/* Lista de enlaces */
+.nav-links {
     list-style: none;
     display: flex;
+    gap: 20px;
 }
 
-nav ul li {
-    margin: 0 12px;
-}
-
-nav ul li a {
+/* Estilo para los enlaces */
+.nav-links li a {
+    color: black;
     text-decoration: none;
-    color: #333;
-    font-size: 24px;
+    font-size: 18px;
+    padding: 10px 15px;
+    transition: background-color 0.3s ease;
 }
 
-nav ul li a.but-animal{
-    background-color: #007b35;
-    color: #fff;
-    padding: 10px 10px;
+.nav-links li a:hover {
+    background-color: rgba(30, 255, 0, 0.2);
     border-radius: 5px;
 }
 
-nav ul li a.sitios, a.informacion{
-    background-color: #ffffff;
-    color: rgb(2, 2, 2);
-    padding: 10px 10px;
+/* Botón especial para "Animales" */
+.btn-animales {
+    background-color: #32CD32;
+    padding: 10px 20px;
     border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
 }
 
-nav ul li a.sitios:hover, a.informacion:hover, a.but-animal:hover{
-    background-color: #22f060;
-    border-radius: 5px;
+.btn-animales:hover {
+    background-color: #07ff83;
 }
 
 .cita {
