--- a/Frontend/css/Animal.css
+++ b/Frontend/css/Animal.css
@@ -28,9 +28,14 @@
     font-family: 'Arial', sans-serif;
 }
 
-.logo a{
-    color: #98FB98;
-    text-decoration: none;
+.logo a {
+    color: inherit;
+    text-decoration: none; 
+}
+
+.logo a:hover {
+    color: inherit; 
+    text-decoration: none; 
 }
 /* Lista de enlaces */
 .nav-links {
@@ -63,6 +68,8 @@
     font-weight: bold;
     opacity: 1;
 }
+
+
 
 .btn-animales:hover {
     background-color: #00DD6F; /* Verde más claro */
@@ -138,6 +145,12 @@
     color: #2F4F2F;
     margin-top: 10px;
     display: block;
+}
+
+.carousel-inner img {
+    width: 100%;
+    height: 400px; /* Ajusta esta altura según tus necesidades */
+    object-fit: cover; /* Asegura que las imágenes mantengan sus proporciones */
 }
 
 /* Características */
