--- a/Frontend/css/ListaAnimales.css
+++ b/Frontend/css/ListaAnimales.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif; /* Cambia por tu preferida */
+    font-family: 'Roboto', sans-serif;
 }
 
 h1, h2, h3 {
